MDEV-11250: mtflush threads stall on shutdown

Code calling mtflush threads to exit was too late.